$Header$
===============================================================

154	Luke Howard <lukeh@padl.com>

	* notes from Scott M. Stone <sstone@foo3.com>

153	Luke Howard <lukeh@padl.com>

	* SSL fix

152	Luke Howard <lukeh@padl.com>

	* further patch from Jarkko for TLS/SSL auth:
	  support for LDAPS/cipher suite selection/
	  client key/cert authentication

151	Luke Howard <lukeh@padl.com>

	* patch from Andrew Rechenberg for Active
	  Directory schema support
	* patch from Jarkko Turkulainen <jt@wapit.com> for
	  peer certificate support with OpenLDAP

150	Luke Howard <lukeh@padl.com>

	* patch from Anselm Kruis for URI support

149	Luke Howard <lukeh@padl.com>

	* fixed compile on Solaris, broken in 145 by
	  malformed Linux patch
	 
148	Luke Howard <lukeh@padl.com>

	* check for HAVE_LDAP_SET_OPTION always

147	Luke Howard <lukeh@padl.com>

	* check for ldap_set_option(), as LDAP_OPT_REFERRALS
	  is defined for OpenLDAP 1.x but without the
	  ldap_set_option() function

146	Luke Howard <lukeh@padl.com>

	* mass reindentation, GNU style
	* patch from Simon Wilkinson <sxw@sxw.org.uk>
	  for compatibility with old initgroups entry
	  point
	* request authPassword attribute if 
	  --enable-authpassword
	* authPassword support in ldap-spwd.c (shadow)

145	Luke Howard <lukeh@padl.com>

	* preliminary support for authPassword attribute
	* updated COPYING
	* patch from Szymon Juraszczyk to suppot
	  _nss_ldap_initgroups_dyn prototype

144	Luke Howard <lukeh@padl.com>

	* when specifying filters with nss_base_XXX,
	  only escape the filter argument not the entire
	  filter

143	Luke Howard <lukeh@padl.com>

	* patch from nalin@redhat.com to avoid 
	  corrupting the heap when the configuration
	  file exists but has no host and base values.
	  _nss_ldap_readconfigfromdns() will write to
	  the region which was already freed.

142	Luke Howard <lukeh@padl.com>

	* patch from Simon Wilkinson <sxw@sxw.org.uk>
	  for memory leak in ldap-service.c
