@@ -5,6 +5,7 @@ Development commenced in mid-1997.
 Special thanks go to people who have volunteered their time, effort,
 and ideas to make this software available.
 
+	Steven Barrus <sbarrus@eng.utah.edu>
 	David Begley <david@avarice.nepean.uws.edu.au>
 	Peter Cherney <peterc@luddite.com.au>
 	Ben Collins <bcollins@debian.org>
