@@ -56,6 +56,11 @@ base dc=padl,dc=com
 # bind timelimit.
 #bind_timelimit 30
 
+# Idle timelimit; client will close connections
+# (nss_ldap only) if the server has not been contacted
+# for the number of seconds specified below.
+#idle_timelimit 3600
+
 # Filter to AND with uid=%s
 #pam_filter objectclass=account
 
