@@ -4,6 +4,7 @@ $Header$
 154	Luke Howard <lukeh@padl.com>
 
 	* notes from Scott M. Stone <sstone@foo3.com>
+	* idle timeout patch from Steve Barrus
 
 153	Luke Howard <lukeh@padl.com>
 
